Optimized method for level clear screen.

--- a/Dimensions-JS/play.htm
+++ b/Dimensions-JS/play.htm
@@ -4,6 +4,7 @@
 	<title>Dimensions</title>
 	<script type="text/javascript" src="jquery-3.5.1.min.js"></script>
 	<script type="text/javascript" src="mainlib.js"></script>
+	<script type="text/javascript" src="interlude.js"></script>
 	<script type="text/javascript" src="pwinfo.js"></script>
 	<script type="text/javascript" src="intro.js"></script>
 	<script type="text/javascript" src="main.js"></script>
